kubernetes/pihole/pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostname: pihole
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          effect: "NoExecute"
          tolerationSeconds: 0
      containers:
        - name: pihole
          image: pihole/pihole:2024.07.0
          ports:
            - containerPort: 53
              name: dns-udp
              protocol: UDP

            - containerPort: 53
              name: dns-tcp
              protocol: TCP

            - containerPort: 67
            - containerPort: 80
          volumeMounts:
            - name: pihole-storage
              mountPath: /etc/pihole
            - name: dnsmasq-storage
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole-storage
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: dnsmasq-storage
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-dns
spec:
  selector:
    app: pihole
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53

    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53

  externalTrafficPolicy: Local

  type: LoadBalancer
  loadBalancerIP: 10.128.100.211

---
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-dashboard
spec:
  selector:
    app: pihole
  ports:
    - protocol: TCP
      name: webui
      port: 80
      targetPort: 80
