kubernetes/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole-kube.skippythesnake.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: pihole-dashboard
          port: 80
  tls:
    secretName: skippythesnake-tls
